# HM_Medical

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Odgovor.docx  deploy.sh  docker-compose.dev.yml  docker-compose.yml  hetzner-cloud-config.txt  hzzo-email.txt  to-do.md
backend/: .env.example  backfill_oids.py  pyproject.toml  seed_gradiski.py  seed_users.py
backend/alembic/versions/: 001_expand_tenant_add_settings_fields.py  002_add_documents_table.py  003_rename_tooth_number_to_lokacija.py  004_add_card_binding.py  005_add_cezih_visits_and_cases.py  006_permission_roles_remediation.py  007_add_practitioner_id.py  008_add_medical_record_id_to_performed.py  009_add_cezih_storno_to_medical_records.py  010_add_prescriptions_table.py  011_add_drug_list_table.py  012_hzzo_drug_list_fields.py  013_add_hzzo_contract_flag.py  014_add_cezih_link_to_appointments.py  015_add_preporucena_terapija.py  016_drop_cezih_euputnice.py  017_drop_cezih_visits.py  018_add_record_types_table.py  019_add_cezih_signature_columns.py  020_add_account_lockout_fields.py  021_add_predracun_tables.py  022_clear_stale_trial_expires.py  023_add_biljeske_table.py  024_add_cezih_insurance_to_patients.py  025_add_icd10_codes_table.py  026_unique_card_binding.py  027_card_cert_serial.py  028_add_cezih_signing_method.py  029_add_document_id_to_medical_records.py  030_drop_document_id_from_medical_records.py  031_add_tip_posjete_to_cezih_visits.py  032_add_reason_to_cezih_visits.py  033_add_foreign_patient_identifiers.py  034_require_cezih_signing_method.py  035_add_tenant_id_to_predracun_stavke.py  036_expand_broj_putovnice.py  037_add_vrsta_posjete_to_cezih_visits.py  038_add_cezih_document_oid.py  039_add_cezih_reference_id_to_documents.py  040_doctor_identifiers.py  (+22 more)
backend/app/: config.py  constants.py  dependencies.py  main.py  sifranik_djelatnosti.py
backend/app/api/: agent_ws.py  appointments.py  auth.py  cezih.py  client_log.py  dashboard.py  documents.py  medical_records.py  patient_rights.py  patients.py  predracuni.py  prescriptions.py  procedures.py  record_types.py  router.py  settings.py  users.py
backend/app/core/: logging.py  plan_enforcement.py  plan_limits.py  terms.py
backend/app/middleware/: error_handler.py  request_id.py  request_logger.py
backend/app/models/: __init__.py  audit_log.py  base.py  cezih_case.py  cezih_euputnica.py  cezih_visit.py  document.py  drug_list.py  dts.py  icd10.py  medical_record.py  patient.py  predracun.py  prescription.py  procedure.py  record_type.py  refresh_token.py  tenant.py  user.py
backend/app/schemas/: auth.py  cezih.py  document.py  medical_record.py  patient.py  prescription.py  procedure.py  record_type.py  tenant.py  user.py
backend/app/services/: agent_connection_manager.py  appointment_service.py  auth_service.py  biljeska_service.py  card_verification.py  cezih_mock_service.py  cezih_service.py  cezih_signing.py  data_export_service.py  dts_sync_service.py  halmed_sync_service.py  icd10_sync_service.py  medical_record_service.py  patient_service.py  pdf_generator.py  pdf_signer.py  predracun_service.py  prescription_service.py  procedure_service.py  record_type_service.py
backend/app/utils/: security.py  seed_data.py
backend/data/: CodeSystem-DTS.json
backend/scripts/: extract_sifranik_djelatnosti.py
backend/tests/: test_cezih_visit_storno_cascade.py
backend/tests/cezih/: test_dispatcher.py
backend/tests/unit/: test_cezih_jid_strict.py  (+4 more)
local-agent/src-tauri/: Cargo.toml  tauri.conf.json
(+186 files in other folders)
