[project]
name = "hm-digital-backend"
version = "0.1.0"
description = "HM Digital Medical MVP - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "slowapi>=0.1.9",
    "reportlab>=4.1.0",
    "pyhanko>=0.25.0",
    "jcs>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E402", "N806"]  # E402: logger-before-imports, N806: local constants with ALL_CAPS naming

[tool.ruff.lint.per-file-ignores]
"app/config.py" = ["E501"]  # Allow long lines in config file comments
"app/services/cezih/client.py" = ["E501"]  # Allow long lines for function signatures
"app/services/cezih/dispatcher.py" = ["E501"]  # Allow long lines for Croatian strings
"app/services/cezih/message_builder.py" = ["E501"]  # Allow long lines for technical comments
"app/services/cezih/service.py" = ["E501"]  # Allow long lines for logger messages
"app/services/cezih_signing.py" = ["E501"]  # Allow long lines for logger messages
"app/utils/seed_data.py" = ["E501"]  # Allow long lines for seed data tuples

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "asn1crypto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jcs"
ignore_missing_imports = true
