[package]
name = "hm-digital-agent"
version = "0.7.1"
description = "HM Digital Local Agent — CEZIH smart card + VPN bridge"
authors = ["HM Digital"]
license = "proprietary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
pcsc = "2"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
dirs = "5"
url = "2"
keyring = "3"
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography"] }
curl = { version = "0.4", features = ["ssl", "static-curl"] }
sha2 = "0.10"
base64 = "0.22"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
